# iis-projekt

./: .dockerignore  .gitignore  Dockerfile  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: data.yaml  data.yml  evaluate_production.yml  train_models.yml
gx/: great_expectations.yml
gx/checkpoints/: air_quality.yml
gx/expectations/: .ge_store_backend_id  air_quality.json
notebooks/: check_join_shape.ipynb  data_analysis.ipynb  manual_testing.ipynb  model_training.ipynb  mongo_testing.ipynb  test_shap.ipynb
reports/data-drift/: CELJE.html  JESENICE.html  KAMNIK.html  KOPER.html  KRANJ.html  LJUBLJANA.html  MARIBOR.html  NOVO_MESTO.html  PTUJ.html  VELENJE.html
reports/data-stability/: CELJE.html  JESENICE.html  KAMNIK.html  KOPER.html  KRANJ.html  LJUBLJANA.html  MARIBOR.html  NOVO_MESTO.html  PTUJ.html  VELENJE.html
resources/: cities.json
src/client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/client/src/: App.vue  main.ts  routes.ts
src/client/src/assets/: index.css
src/client/src/components/: AQIPredictionCard.vue  ComboBox.vue  DashboardView.vue  DataReports.vue  MapView.vue  ModelDetailsView.vue  NavMenu.vue  ThemeSwitch.vue
src/data/: fetch_air_quality_data.py  fetch_weather_data.py  ks_test_data.py  process_data.py  test_data.py  train_test_split_data.py  validate_data.py
src/models/: evaluate_prod.py  feature_engineer.py  train_eval_models.py
src/serve/: aqi_predictor.py  location_info_service.py  metrics_service.py  mongo.py  server.py
src/util/: constants.py  util.py
(+3 files in other folders)
